// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process rkeeper products tests Dish validator - bad case 1`] = `"Dish Object Validation Error (JOI): \\"name\\" is required"`;

exports[`Process rkeeper products tests Dish validator - good case: GOOD CASE 1`] = `
Object {
  "active": 0,
  "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
  "id": 1000114,
  "modischeme": 0,
  "name": "Próba ital",
  "price": 50000,
}
`;

exports[`Process rkeeper products tests Dish validator - good case: NORMALIZE 1`] = `
Object {
  "active": 0,
  "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
  "id": 1000114,
  "modischeme": 0,
  "name": "Próba ital",
  "price": 500,
}
`;

exports[`Process rkeeper products tests ModifierGroup validator - bad case 1`] = `"ModifierGroup Object Validation Error (JOI): \\"name\\" is required, \\"modifiers[0].price\\" is required, \\"modifiers[1].name\\" is required"`;

exports[`Process rkeeper products tests ModifyerGroup validator - good case: GOOD CASE 1`] = `
Object {
  "id": 1017199,
  "modifiers": Array [
    Object {
      "active": 1,
      "id": 1011504,
      "name": "Papírpohár 2dl",
      "price": 5000,
    },
    Object {
      "active": 1,
      "id": 1011517,
      "name": "Saját pohár",
      "price": 0,
    },
  ],
  "name": "2dl papírpohár",
}
`;

exports[`Process rkeeper products tests ModifyerGroup validator - good case: NORMALIZE 1`] = `
Object {
  "id": 1017199,
  "modifiers": Array [
    Object {
      "active": 1,
      "id": 1011504,
      "name": "Papírpohár 2dl",
      "price": 50,
    },
    Object {
      "active": 1,
      "id": 1011517,
      "name": "Saját pohár",
      "price": 0,
    },
  ],
  "name": "2dl papírpohár",
}
`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponent calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponent calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponent calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponent calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponentSet calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponentSet calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponentSet calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: CreateProductComponentSet calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponentSets calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponentSets calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponentSets calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponentSets calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponents calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponents calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponents calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: SearchProductComponents calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponent calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponent calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponent calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponent calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponentSet calls 1`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponentSet calls 2`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponentSet calls 3`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: UpdateProductComponentSet calls 4`] = `Array []`;

exports[`Process rkeeper products tests Test active modifier cases: the sets  1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests Test active modifier cases: the sets  2`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests Test active modifier cases: the sets  3`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests Test active modifier cases: the sets  4`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests decodeName 1`] = `"Saját pohár"`;

exports[`Process rkeeper products tests externalProductIdMaker test 1`] = `"GUID"`;

exports[`Process rkeeper products tests processDishes items with different ids 1`] = `
Array [
  Object {
    "active": 0,
    "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
    "id": 1000114,
    "modischeme": 0,
    "name": "Próba ital",
    "price": 500,
  },
  Object {
    "active": 0,
    "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
    "id": 21312321,
    "modischeme": 0,
    "name": "Próba ital",
    "price": 500,
  },
]
`;

exports[`Process rkeeper products tests processDishes items with equal ids 1`] = `
Array [
  Object {
    "active": 0,
    "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
    "id": 1000114,
    "modischeme": 0,
    "name": "Próba ital",
    "price": 500,
  },
]
`;

exports[`Process rkeeper products tests processDishes must work on the fixture 1`] = `
Array [
  Object {
    "active": 1,
    "guid": "4b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
    "id": 1000114,
    "modischeme": 0,
    "name": "próba ital",
    "price": 500,
  },
  Object {
    "active": 1,
    "guid": "5b9e3ab3-86a0-48d9-a9a9-f4e0c9fbce68",
    "id": 1000115,
    "modischeme": 0,
    "name": "Próba kaja",
    "price": 600,
  },
]
`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponent calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponent calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponent calls (create new components) 1`] = `
Array [
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1017196",
        "name": Object {
          "hu": "Tej sima (90ml)",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1017195",
        "name": Object {
          "hu": "Kókuszital (90ml)",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1017194",
        "name": Object {
          "hu": "Laktózmentes tej (90ml)",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1017193",
        "name": Object {
          "hu": "Mandulaital (90ml)",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1017191",
        "name": Object {
          "hu": "Zabital (90ml)",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1011504",
        "name": Object {
          "hu": "Papírpohár 2dl",
        },
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "dirty": true,
        "externalId": "1011517",
        "name": Object {
          "hu": "Saját pohár",
        },
      },
    },
  ],
]
`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponent calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponentSet calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponentSet calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponentSet calls (create new components) 1`] = `
Array [
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "description": "describe me",
        "dirty": true,
        "externalId": "1017198",
        "items": Array [
          "NEW PRODUCT COMPONENT ID",
          "NEW PRODUCT COMPONENT ID",
          "NEW PRODUCT COMPONENT ID",
          "NEW PRODUCT COMPONENT ID",
          "NEW PRODUCT COMPONENT ID",
        ],
        "name": Object {
          "hu": "Tejek 90ml",
        },
        "type": "rkeeper",
      },
    },
  ],
  Array [
    Object {
      "input": Object {
        "chainId": "CHAINID",
        "description": "describe me",
        "dirty": true,
        "externalId": "1017199",
        "items": Array [
          "NEW PRODUCT COMPONENT ID",
          "NEW PRODUCT COMPONENT ID",
        ],
        "name": Object {
          "hu": "2dl papírpohár",
        },
        "type": "rkeeper",
      },
    },
  ],
]
`;

exports[`Process rkeeper products tests resolveComponentSets: CreateProductComponentSet calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponentSets calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponentSets calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponentSets calls (create new components) 1`] = `
Array [
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017198",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017199",
        },
      },
    },
  ],
]
`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponentSets calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponents calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponents calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponents calls (create new components) 1`] = `
Array [
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017196",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017195",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017194",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017193",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1017191",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1011504",
        },
      },
    },
  ],
  Array [
    Object {
      "filter": Object {
        "externalId": Object {
          "eq": "1011517",
        },
      },
    },
  ],
]
`;

exports[`Process rkeeper products tests resolveComponentSets: SearchProductComponents calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponent calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponent calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponent calls (create new components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponent calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponentSet calls (CreateProductComponent fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponentSet calls (SearchProductComponentSet fails) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponentSet calls (create new components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: UpdateProductComponentSet calls (update old components) 1`] = `Array []`;

exports[`Process rkeeper products tests resolveComponentSets: the sets (CreateProductComponent fails)  1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests resolveComponentSets: the sets (SearchProductComponentSet fails)  1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests resolveComponentSets: the sets (create new components)  1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;

exports[`Process rkeeper products tests resolveComponentSets: the sets (update old components)  1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 100,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 100,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
    Object {
      "items": Array [
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 50,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 50,
        },
        Object {
          "externalId": undefined,
          "position": -1,
          "price": 0,
          "productComponentId": "NEW PRODUCT COMPONENT ID",
          "refGroupPrice": 0,
        },
      ],
      "position": -1,
      "productSetId": "NEW PRODUCT COMPONENT SET ID",
    },
  ],
}
`;
